update financebench_id_01482 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1728,7 +1728,7 @@ financebench_id_01482:
 
   category: 1-COMPARE
   correctness: >-
-    the answer says that the proposal related to Net-Zero Emissions was defeated / not successful
+    the answer says proposal related to Net-Zero Emissions was defeated / not successful
 
 
 financebench_id_00705:
