--- a/examples/FinanceBench/.env.template
+++ b/examples/FinanceBench/.env.template
@@ -1,2 +1,4 @@
-AITO_HOST=[... Aitomatic host URL if running SSAs directly on Aitomatic services ...]
-AITO_KEY=[... Aitomatic key if running SSAs directly on Aitomatic services ...]
+AITO_HOST=[... Aitomatic host URL if running on Aitomatic services ...]
+AITO_KEY=[... Aitomatic key if running on Aitomatic services ...]
+
+OPENAI_API_KEY=[... OpenAI API key if running on OpenAI services ...]
