--- a/examples/.env.template
+++ b/examples/.env.template
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=[... OpenAI creds if running directly on OpenAI services ...]
+OPENAI_API_KEY=[... OpenAI API key if running on OpenAI services ...]
