update financebench_id_01981 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -685,7 +685,7 @@ financebench_id_01981:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative, i.e., retention was good
+    the answer affirms that retention was good
 
 
 financebench_id_05718:
