update financebench_id_00288 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -815,7 +815,7 @@ financebench_id_00288:
 
   category: 1-COMPARE
   correctness: >-
-    the answer is affirmative, i.e., Cash & Cash Equivalents decreased
+    the answer affirms that Cash & Cash Equivalents decreased
 
 
 financebench_id_00460:
