update financebench_id_01091 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -935,7 +935,7 @@ financebench_id_01091:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer affirms that there were material lawsuits / legal battles
+    the answer affirms that there have been material lawsuits / legal battles
 
 
 financebench_id_00678:
