--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1170,7 +1170,7 @@ financebench_id_01107:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative, i.e., there were material lawsuits / legal battles
+    the answer affirms that there have been material lawsuits / legal battles
 
 
 financebench_id_01244:
