--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1195,7 +1195,7 @@ financebench_id_00839:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative and mentions Ulta Beauty
+    the answer affirms that and mentions Ulta Beauty
 
 
 financebench_id_00822:
