update financebench_id_01254 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1437,7 +1437,7 @@ financebench_id_01254:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative, i.e., dividends were paid
+    the answer affirms that dividends have been / were paid
 
 
 financebench_id_00382:
