update financebench_id_00517 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -921,7 +921,7 @@ financebench_id_00517:
   correctness: |-
     the answer mentions following 3 categories:
     - Commercial Airplanes;
-    - Defense (or fully written "Defense, Space & Security"); and
+    - Defense/Defence (or fully written "Defense, Space & Security"); and
     - Services (or fully written "Global Services")
 
 
