--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -648,8 +648,8 @@ financebench_id_00720:
 
   category: 6-OTHER-ADVANCED
   correctness: >-
-    the answer says that Gross Margin is not a very relevant/useful metric
-    for this business model and/or industry
+    the answer says that Gross Margin is not a very relevant/useful metric for this business model and/or industry,
+    or, alternatively, that performance in this business model and/or industry is usually not judged through Gross Margin
 
 
 financebench_id_01351:
