--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -451,7 +451,7 @@ financebench_id_01936:
 
   category: 0-RETRIEVE
   correctness: |-
-    the answer mentions Employee costs and, OPTIONALLY, also some of the following:
+    the answer mentions Employee costs/liabilities and, OPTIONALLY, also some of the following:
     - Russia-Ukraine conflict; and
     - integration of acquired Bemis operations
 
