--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -281,9 +281,9 @@ financebench_id_00540:
 
   category: 3-CALC-COMPLEX
   correctness: |-
-    the answer contains a calculated Inventory Turnover Ratio metric value that is either:
-    - approximately in the range from 9.0 to 10.0 times (if using ending Inventory as denominator), or
-    - approximately 12.0 times (if using average Inventory as denominator)
+    the answer contains a calculated Inventory Turnover Ratio (or Inventory Conversion Ratio) metric value that is either
+    - approximately in the range from 9.0 to 10.0 times (implicitly using ending Inventory as denominator), or
+    - approximately 12.0 times (implicitly using average Inventory as denominator)
 
 
 financebench_id_10420:
