--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -183,6 +183,7 @@ financebench_id_07966:
   correctness: >-
     the answer contains a calculated percentage value that is approximately in the range from 1.70% to 2.10%,
     or, alternatively, a calculated decimal value that is approximately in the range from 0.0170 to 0.0210
+    (if the answer is a single number, assume that it is that calculated metric value)
 
 
 financebench_id_04735:
