--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -752,9 +752,10 @@ financebench_id_02608:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated average Net Profit Margin
+    the answer contains a calculated Average Net Profit Margin
     percentage value that is approximately in the range from 2.50% to 3.00%,
     or, alternatively, a decimal value that is approximately in the range from 0.0250 to 0.0300
+    (if the answer is a single number, assume that it is that Average Net Profit Margin metric value)
 
 
 financebench_id_04417:
