--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -886,6 +886,7 @@ financebench_id_03838:
   category: 2-CALC-CHANGE
   correctness: >-
     the answer contains a calculated Revenue growth percentage value that is over 100.0%
+    (if the answer is a single number, assume that it is that Revenue growth percentage value)
 
 
 financebench_id_07661:
