--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1045,6 +1045,7 @@ financebench_id_09724:
     the answer contains a calculated Cost of Goods Sold (COGS) Margin
     percentage value that is in the range from 38.00% to 42.00%,
     or, alternatively, a calculated decimal value that is in the range from 0.38 to 0.42
+    (if the answer is a single number, assume that it is that Cost of Goods Sold (COGS) Margin metric value)
 
 
 financebench_id_06272:
