--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1260,9 +1260,9 @@ financebench_id_03471:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Working Capital Ratio
-    decimal value that is in the range from 0.65 to 0.70,
-    or, alternatively, a calculated percentage value that is in the range from 65% to 70%
+    the answer contains a calculated Working Capital Ratio decimal value that is in the range from 0.6500 to 0.7000,
+    or, alternatively, a calculated percentage value that is in the range from 65.00% to 70.00%
+    (if the answer is a single number, assume that it is that Working Capital Ratio metric value)
 
 
 financebench_id_04854:
