--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1390,6 +1390,7 @@ financebench_id_04412:
   category: 3-CALC-COMPLEX
   correctness: >-
     the answer contains a calculated Asset Turnover Ratio decimal value that is approximately in the range from 1.30 to 1.40
+    (if the answer is a single number, assume that it is that Asset Turnover Ratio decimal value)
 
 
 financebench_id_03031:
