--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1744,6 +1744,7 @@ financebench_id_04481:
     the answer contains a calculated EBITDA Margin
     percentage value that is approximately in the range from 16.00% to 17.00%,
     or, alternatively, a calculated decimal value that is approximately in the range from 0.1600 to 0.1700
+    (if the answer is a single number, assume that it is that EBITDA Margin metric value)
 
 
 financebench_id_01482:
