update financebench_id_00215 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -2020,8 +2020,7 @@ financebench_id_00215:
 
   category: 4-CALC-AND-JUDGE
   correctness: >-
-    the answer opines that Verizon's business is capital-intensive,
-    and justifies such opinion with a calculated ratio
+    the answer opines that Verizon's business is capital-intensive, and justifies such opinion with a calculated ratio
 
 
 financebench_id_00566:
