--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1646,7 +1646,7 @@ financebench_id_00080:
   category: 3-CALC-COMPLEX
   correctness: >-
     the answer affirms that Working Capital is/was positive,
-    proving by a calculated Working Capital metric value that is positive
+    proving so by a calculated Working Capital metric value that is positive
 
 
 financebench_id_04980:
