--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1027,8 +1027,7 @@ financebench_id_03473:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Return on Assets (RoA)
-    percentage value that is in the range from 1.00% to 2.00%,
+    the answer contains a calculated Return on Assets (RoA) percentage value that is in the range from 1.00% to 2.00%,
     or, alternatively, a calculated decimal value that is in the range from 0.0100 to 0.0200
     (if the answer is a single number, assume that it is that Return on Assets (RoA) metric value)
 
