update financebench_id_03856 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -232,7 +232,7 @@ financebench_id_03856:
     the answer contains a calculated Operating Cash Flow Ratio
     decimal value that is approximately in the range from 0.8000 to 0.8500,
     or, alternatively, a calculated percentage value that is approximately in the range from 80.00% to 85.00%
-    (if the answer is a single number, assume that it is that Operating Cash Flow Ratio metric value)
+    (if the answer is a single number, assume that it is that calculated Operating Cash Flow Ratio metric value)
 
 
 financebench_id_00438:
