--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -306,7 +306,7 @@ financebench_id_10420:
     the answer contains a calculated Return on Assets (RoA)
     percentage value that is NEGATIVE and approximately in the range from -2.00% to -1.40%,
     or, alternatively, a calculated decimal value that is NEGATIVE and approximately in the range from -0.0200 to -0.0140
-    (if the answer is a single number, assume that it is that Return on Assets (RoA) metric value)
+    (if the answer is a single number, assume that it is that calculated Return on Assets (RoA) metric value)
 
 
 financebench_id_06655:
