--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1259,7 +1259,7 @@ financebench_id_03471:
   correctness: >-
     the answer contains a calculated Working Capital Ratio decimal value that is in the range from 0.6500 to 0.7000,
     or, alternatively, a calculated percentage value that is in the range from 65.00% to 70.00%
-    (if the answer is a single number, assume that it is that Working Capital Ratio metric value)
+    (if the answer is a single number, assume that it is that calculated Working Capital Ratio metric value)
 
 
 financebench_id_04854:
