update financebench_id_04854 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1276,7 +1276,7 @@ financebench_id_04854:
     3215.4, 3215.4 million, 3.2154 billion,
     3215, 3215 million, 3.215 billion,
     3200, 3200 million or 3.2 billion
-    (if the answer is a single number, assume that it is that Free Cash Flows (FCF) metric value)
+    (if the answer is a single number, assume that it is that calculated Free Cash Flows (FCF) metric value)
 
 
 financebench_id_10136:
