update financebench_id_03849 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1447,7 +1447,7 @@ financebench_id_03849:
   correctness: >-
     the answer contains a calculated metric percentage value that is approximately in the range from 7.50% to 8.50%,
     or, alternatively, a calculated decimal value that is approximately in the range from 0.0750 to 0.0850
-    (if the answer is a single number, assume that it is that metric value)
+    (if the answer is a single number, assume that it is that calculated metric value)
 
 
 financebench_id_01254:
