--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1586,7 +1586,7 @@ financebench_id_04302:
   correctness: >-
     the answer contains a calculated metric percentage value that is approximately in the range from 50.00% to 60.00%,
     or, alternatively, a calculated decimal value that is approximately in the range from 0.5000 to 0.6000
-    (if the answer is a single number, assume that it is that metric value)
+    (if the answer is a single number, assume that it is that calculated metric value)
 
 
 financebench_id_03531:
