update financebench_id_03620 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1722,7 +1722,7 @@ financebench_id_03620:
     - approximately in the range from 8500 million to 9500 million;
     - approximately in the range from 8.5 billion to 9.5 billion; or
     - stated as approximately 9000 million or 9 billion
-    (if the answer is a single number, assume that it is that metric value)
+    (if the answer is a single number, assume that it is that calculated metric value)
 
 
 financebench_id_04481:
