--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1738,7 +1738,7 @@ financebench_id_04481:
   correctness: |-
     the answer contains a calculated EBITDA Margin percentage value that is approximately in the range from 16.00% to 17.00%,
     or, alternatively, a calculated decimal value that is approximately in the range from 0.1600 to 0.1700
-    (if the answer is a single number, assume that it is that EBITDA Margin metric value)
+    (if the answer is a single number, assume that it is that calculated EBITDA Margin metric value)
 
 
 financebench_id_01482:
