--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1766,7 +1766,7 @@ financebench_id_00705:
   correctness: >-
     the answer contains a calculated change quantity that is equivalent to or approximately equal to
     400,000,000, 400 million or 0.4 billion
-    (if the answer is a single number, assume that it is that change amount)
+    (if the answer is a single number, assume that it is that calculated change amount)
 
 
 financebench_id_00882:
