--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1781,7 +1781,7 @@ financebench_id_00882:
   correctness: >-
     the answer contains a calculated total quantity that is equivalent to or approximately equal to
     8,400,000,000, 8400 million or 8.4 billion
-    (if the answer is a single number, assume that it is that total amount)
+    (if the answer is a single number, assume that it is that calculated total amount)
 
 
 financebench_id_01474:
