--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1944,7 +1944,7 @@ financebench_id_00605:
   category: 3-CALC-COMPLEX
   correctness: >-
     the answer contains a calculated percentage value that is approximately in the range from 30% to 40%
-    (if the answer is a single number, assume that it is that percentage value)
+    (if the answer is a single number, assume that it is that calculated percentage value)
 
 
 financebench_id_00606:
