--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -2042,7 +2042,7 @@ financebench_id_06247:
   category: 3-CALC-COMPLEX
   correctness: >-
     the answer contains a calculated Days Payable Outstanding (DPO) decimal value that is in the range from 35.00 to 50.00
-    (if the answer is a single number, assume that it is that Days Payable Outstanding (DPO) decimal value)
+    (if the answer is a single number, assume that it is that calculated Days Payable Outstanding (DPO) decimal value)
 
 
 financebench_id_04784:
