--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -643,7 +643,7 @@ financebench_id_00723:
 
   category: 6-OTHER-ADVANCED
   correctness: >-
-    the answer says that Operating Margin is not a very relevant/useful metric for this business model and/or industry,
+    the answer argues that Operating Margin is not a very relevant/useful metric for this business model and/or industry,
     or, alternatively, that performance in this business model and/or industry is usually not judged through Operating Margin
 
 
@@ -657,7 +657,7 @@ financebench_id_00720:
 
   category: 6-OTHER-ADVANCED
   correctness: >-
-    the answer says that Gross Margin is not a very relevant/useful metric for this business model and/or industry,
+    the answer argues that Gross Margin is not a very relevant/useful metric for this business model and/or industry,
     or, alternatively, that performance in this business model and/or industry is usually not judged through Gross Margin
 
 
@@ -1330,7 +1330,7 @@ financebench_id_00206:
 
   category: 6-OTHER-ADVANCED
   correctness: >-
-    the answer says that Gross Margin is not a very relevant/useful metric for this business model and/or industry,
+    the answer argues that Gross Margin is not a very relevant/useful metric for this business model and/or industry,
     or, alternatively, that performance in this business model and/or industry is usually not judged through Gross Margin
 
 
