--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -302,8 +302,8 @@ financebench_id_10420:
   category: 3-CALC-COMPLEX
   correctness: >-
     the answer contains a calculated Return on Assets (RoA)
-    percentage value that is NEGATIVE and approximately in the range from -2.00% to -1.40%,
-    or, alternatively, a calculated decimal value that is NEGATIVE and approximately in the range from -0.0200 to -0.0140
+    percentage value that is NEGATIVE and in the range from -2.00% to -1.40%,
+    or, alternatively, a calculated decimal value that is NEGATIVE and in the range from -0.0200 to -0.0140
     (if the answer is a single number, assume that it is that calculated Return on Assets (RoA) metric value)
 
 
