--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -749,9 +749,8 @@ financebench_id_02608:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Average Net Profit Margin
-    percentage value that is approximately in the range from 2.50% to 3.00%,
-    or, alternatively, a calculated decimal value that is approximately in the range from 0.0250 to 0.0300
+    the answer contains a calculated Average Net Profit Margin percentage value that is in the range from 2.50% to 3.00%,
+    or, alternatively, a calculated decimal value that is in the range from 0.0250 to 0.0300
     (if the answer is a single number, assume that it is that calculated Average Net Profit Margin metric value)
 
 
