--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1084,9 +1084,8 @@ financebench_id_02981:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer constains a calculated Average Operating Income Margin
-    percentage value that is approximately in the range from 9.00% to 11.00%,
-    or, alternatively, a calculated decimal value that is approximately in the range from 0.0900 to 0.1100
+    the answer constains a calculated Average Operating Income Margin percentage value that is in the range from 9.00% to 11.00%,
+    or, alternatively, a calculated decimal value that is in the range from 0.0900 to 0.1100
     (if the answer is a single number, assume that it is that calculated Average Operating Income Margin metric value)
 
 
