update financebench_id_05915 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1144,8 +1144,7 @@ financebench_id_05915:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer constains a calculated Fixed Asset Turnover Ratio
-    decimal value that is approximately in the range from 17.00 to 19.00
+    the answer constains a calculated Fixed Asset Turnover Ratio decimal value that is in the range from 17.00 to 19.00
     (if the answer is a single number, assume that it is that calculated Fixed Asset Turnover Ratio decimal value)
 
 
