--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1409,7 +1409,7 @@ financebench_id_03718:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated CAGR percentage value that is approximately in the range from 0.400% to 0.500%
+    the answer contains a calculated CAGR percentage value that is in the range from 0.400% to 0.500%
     (if the answer is a single number, assume that it is that calculated CAGR percentage value)
 
 
