refactor: Create config/llms for l2 with temperature setting

--- a/examples/.env.template
+++ b/examples/.env.template
@@ -1,1 +1,3 @@
 OPENAI_API_KEY=[... OpenAI API key if running on OpenAI services ...]
+LLAMA_API_KEY=[... Meta Llama API key if running on OpenAI services ...]
+
