--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ llama-index-callbacks-promptlayer = {version = ">=0.1", optional = true}
 llama-index-callbacks-wandb = {version = ">=0.1", optional = true}
 streamlit = {version = ">=1.33", optional = true}
 streamlit-mic-recorder = {version = ">=0.0.8", optional = true}
+llamaapi = "^0.1.36"
 
 [tool.poetry.extras]
 contrib = [
